added to the readme and cleaned up a bit